* Correct attribute is type * Make sure the loading message has a high z-index
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@643 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/static/css/base.css
+++ b/share/web/static/css/base.css
@@ -48,6 +48,7 @@ div#jifty-wait-message {
     position: fixed;
     top: 10px;
     right: 10px;
+    z-index: 42;
 }
 
 
